# drone_racing

./: .gitignore  README.md
data/: lap_logs.csv  plot.py
src/bspline/include/bspline/: non_uniform_bspline.h
src/bspline/src/: non_uniform_bspline.cpp
src/bspline_opt/include/bspline_opt/: bspline_optimizer.h
src/bspline_opt/src/: bspline_optimizer.cpp
src/plan_manage/: CMakeLists.txt  package.xml
src/plan_manage/config/: traj.rviz
src/plan_manage/include/plan_manage/: il_planner.h  ilc_planner.h  lap_logger.h  planner_manager.h  racing_fsm.h
src/plan_manage/launch/: racing.launch  racing.xml  simulator.xml
src/plan_manage/msg/: Bspline.msg
src/plan_manage/src/: il_planner.cpp  il_planner_node.cpp  il_traj_server.cpp  ilc_planner.cpp  lap_logger.cpp  planner_manager.cpp  racing_fsm.cpp
src/traj_utils/: CMakeLists.txt  package.xml
src/traj_utils/include/traj_utils/: planning_visualization.h
src/traj_utils/src/: planning_visualization.cpp
src/uav_simulator/Utils/waypoint_generator/src/: waypoint_generator.cpp
src/uav_simulator/map_generator/: CMakeLists.txt  random_map.pcd  random_map1.pcd
src/uav_simulator/map_generator/src/: fake_odom.cpp  random_forest_sensing.cpp
src/uav_simulator/so3_control/src/: so3_control_nodelet.cpp
